Reworked guage selection to fix visual bugs with the guages becomign seperated. Added an additional verticle view for smaller screens. There is still a visual issue with guages in medium sizes having stretched proportion due to text.

--- a/src/components/css/Dashboard.css
+++ b/src/components/css/Dashboard.css
@@ -135,21 +135,39 @@
   z-index: 0;
 }
 
-.dashboard-data-grid {
-  position: relative;
+.dashboard-scenerio-selector {
+  position:static
+}
+
+.dashboard-guage-grid {
   display: grid;
-  width: 100%;
   font-family: Geneva, sans-serif;
   color: rgb(218, 218, 218);
   grid-template-columns: auto repeat(6, 1fr);
-  grid-template-rows: repeat(2, auto);
   column-gap: 4px;
-  row-gap: 0px;
-  margin: auto;
   margin-top: 2%;
   margin-bottom: 2%;
   justify-items: center;
-  align-items: center;
+}
+
+.dashboard-guage-grid-columns { /* 960px */
+  display: grid;
+}
+
+.guage-row-open {
+  display: grid;
+  padding-top: 25px;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(3, auto);
+  background-color: rgb(127, 127, 127);
+  border-radius: 15px;
+}
+
+.guage-row-closed {
+  display: grid;
+  padding-top: 25px;
+  grid-template-rows: repeat(3, auto);
+  cursor: pointer;
 }
 
 .chart-container {
@@ -158,28 +176,9 @@
 .guageText {
   white-space: nowrap;
   text-align: center;
+  text-overflow: ellipsis;
   font-size: 1.25vw;
   margin-bottom: 10%;
-}
-
-.guageOpen {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  background-color: rgb(127, 127, 127);
-}
-
-.guageOpenTop {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  background-color: rgb(127, 127, 127);
-  border-radius: 10% 10% 0 0;
-}
-
-.guageOpenBottom {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  background-color: rgb(127, 127, 127);
-  border-radius: 0 0 10% 10%;
 }
 
 .guageDefault {
@@ -188,6 +187,64 @@
   cursor: pointer;
 }
 
+@media screen and (max-width: 822px) {
+  .dashboard-guage-grid {
+    display: grid;
+    font-family: Geneva, sans-serif;
+    color: rgb(218, 218, 218);
+    grid-template-columns: 1fr;
+    row-gap: 4px;
+    margin-left: 2%;
+    margin-right: 2%;
+    align-items: center;
+  }
+
+  .dashboard-guage-grid-columns { /* 960px */
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 100%;
+  }
+  
+  .dashboard-scenerio-selector {
+    position:static;
+    padding-right: 25%;
+    padding-left: 25%;
+  }
+  
+  .guage-row-open {
+    display: grid;
+    padding-top: 25px;
+    grid-template-rows: 1fr;
+    grid-template-columns: repeat(2, auto);
+    background-color: rgb(127, 127, 127);
+    border-radius: 15px;
+  }
+  
+  .guage-row-closed {
+    display: grid;
+    padding-top: 25px;
+    grid-template-columns: repeat(2, auto);
+    cursor: pointer;
+  }
+  
+  .chart-container {
+    z-index: 10;
+  }
+
+  .guageText {
+    white-space: nowrap;
+    text-align: center;
+    text-overflow: ellipsis;
+    font-size: 1.25vw;
+    margin-bottom: 10%;
+  }
+  
+  .guageDefault {
+    padding-left: 10px;
+    padding-right: 10px;
+    cursor: pointer;
+  }
+}
 .selection-divider {
   position: relative;
   text-align: center;
